--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -33,7 +33,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/madooei/typography.git"
+    "url": "git+https://github.com/madooei/typography.git"
   },
   "homepage": "https://madooei.github.io/typography/",
   "bugs": {
