feat: add publishConfig for public access in package.json

--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -25,6 +25,9 @@
     "README.md",
     "CHANGELOG.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "typography",
     "styles"
